[package]
name = "weatherhacks-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_dsp = "0.10.0"
circular-buffer = "0.1.7"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
gnuplot = "0.0.43"
hound = "3.5.1"

# sample = "0.11.0"
